--- a/resources/metadata/mavenBuild.yaml
+++ b/resources/metadata/mavenBuild.yaml
@@ -183,6 +183,11 @@ spec:
         params:
           - name: custom/createBom
             type: bool
+      - name: commonPipelineEnvironment
+        type: piperEnvironment
+        params:
+          - name: custom/logSuccessfulMavenTransfers
+            type: bool
   containers:
     - name: mvn
       image: maven:3.6-jdk-8
